deployments/AuthN/icc-k8s-ldap-deployment.yaml
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  name: icc-k8s-ldap
  namespace: kube-system
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: icc-k8s-ldap
    spec:
      volumes:
        - name: authn-tls-secret
          secret:
            secretName: kubernetes-ldap-server-informatik-haw-hamburg-de
      containers:
      - name: icc-k8s-ldap
        image: YOUR_IMAGE
        args: ["--ldap-host", "HOSTADDRESS",
               "--ldap-port", "636",
               "--ldap-base-dn", "ou=users,ou=dep-inf,o=haw-hamburg",
               "--ldap-user-attribute", "uid",
               "--ldap-search-user-dn", "$(SECRET_LDAP_USERNAME)",
               "--ldap-search-user-password", "$(SECRET_LDAP_PASSWORD)",
               "--authn-tls-cert-file", "/etc/kubernetes/ssl/tls.crt",
               "--authn-tls-private-key-file", "/etc/kubernetes/ssl/tls.key"]
        ports:
        - containerPort: 8080
        - containerPort: 8443
        resources:
          limits:
            cpu: 50m
            memory: 90Mi
          requests:
            cpu: 50m
            memory: 90Mi
        volumeMounts:
          - name: authn-tls-secret
            mountPath: /etc/kubernetes/ssl
            readOnly: true
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 3
