deployments/AuthN/kube-system-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: icc-kube-system-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - icc-login.informatik.haw-hamburg.de
    secretName: icc-login-informatik-haw-hamburg-de
  backend:
        serviceName: icc-k8s-ldap
        servicePort: http
  rules:
  - host: icc-login.informatik.haw-hamburg.de
    http:
      paths:
      - path: /ldapAuth
        backend:
            serviceName: icc-k8s-ldap
            servicePort: http
